Add product metadata analysis

--- a/metadata/res_analysis.ipynb
+++ b/metadata/res_analysis.ipynb
@@ -2,11 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd, matplotlib.pyplot as plt"
+    "import pandas as pd, matplotlib.pyplot as plt, gzip, json, os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Images Resolution Analysis"
    ]
   },
   {
@@ -110,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +130,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +168,7 @@
        "Name: height, Length: 1572, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +208,7 @@
        "Length: 45719, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +235,7 @@
        "<AxesSubplot:title={'center':'Width'}, ylabel='Frequency'>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -258,6 +265,168 @@
     "\n",
     "1. 2200x1879 (92513 images)\n",
     "2. 2560x2560 (45005 images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2200x1879\n",
+    "images_2200x1879 = images_data[\n",
+    "    (images_data['height'] == 2200) &\n",
+    "    (images_data['width'] == 1879)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Images Metadata Parsing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, let us extract the category for (ideally) each image. We will create a list of dictionaries:\n",
+    "```\n",
+    "[\n",
+    "    {\"image_id\": \"category},\n",
+    "    ...\n",
+    "]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gz_files = os.listdir('metadata')\n",
+    "gz_files = [i for i in gz_files if i != '.DS_Store']\n",
+    "\n",
+    "image_metadata = []\n",
+    "\n",
+    "for f in gz_files:\n",
+    "    with gzip.open(f'metadata/{f}', \"rt\", encoding='utf-8') as gz_file:\n",
+    "        gz_data = gz_file.read()\n",
+    "        gz_data_list = gz_data.split('\\n')\n",
+    "        \n",
+    "        # need to parse line by line, otherwise there is an error\n",
+    "        for line in gz_data_list[:-1]:\n",
+    "            data = json.loads(line)\n",
+    "            try:\n",
+    "                image_metadata.append({data['main_image_id']: data['product_type'][0]['value']})\n",
+    "                # can get more other info, see README.md for details\n",
+    "            except KeyError:\n",
+    "                pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_metadata_df = pd.DataFrame(\n",
+    "    {\n",
+    "        'image_id': [list(i.keys())[0] for i in image_metadata],\n",
+    "        'category': [list(i.values())[0] for i in image_metadata]\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_metadata_df_2200x1879 = image_metadata_df.merge(images_2200x1879)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us see what categories we get for the images of size 2200x1879 px"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CELLULAR_PHONE_CASE    54815\n",
+       "Name: category, dtype: int64"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_metadata_df_2200x1879['category'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It seems only phone cases are represented by the images of this size. Let us see what categories we have in the full dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CELLULAR_PHONE_CASE            64825\n",
+       "SHOES                          12964\n",
+       "GROCERY                         6509\n",
+       "HOME                            5247\n",
+       "HOME_BED_AND_BATH               3078\n",
+       "                               ...  \n",
+       "CONDIMENT                          1\n",
+       "HOME_ORGANIZERS_AND_STORAGE        1\n",
+       "GOLF_CLUB                          1\n",
+       "SCULPTURE                          1\n",
+       "STROLLER                           1\n",
+       "Name: category, Length: 573, dtype: int64"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_metadata_df['category'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All in all, phone cases is the most popular category of all the listings. I think we can reduce the problem to extracting top N similar phone cases base on the user input. Consider the following scenario:\n",
+    "\n",
+    "1. A user finds a nice case on Pinterest, from a friend, etc.\n",
+    "2. They are obviously not sure which words to use to describe it\n",
+    "3. Consequently, it becomes difficult for them to buy such a case\n",
+    "4. As a solution, they can use our service, which will look similar cases up\n",
+    "\n",
+    "The problem is quite challenging, since the model has to be able to determine all the subtle features of the case, e.g., Hello Kitty pic, stars, flowers, etc."
    ]
   },
   {
