Add target variable analysis

--- a/metadata/res_analysis.ipynb
+++ b/metadata/res_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "4  11RUV5Fs65L      30    500  d9/d91ab9cf.jpg"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "Name: height, Length: 1572, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "Length: 45719, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "<AxesSubplot:title={'center':'Width'}, ylabel='Frequency'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,18 @@
     "        for line in gz_data_list[:-1]:\n",
     "            data = json.loads(line)\n",
     "            try:\n",
-    "                image_metadata.append({data['main_image_id']: data['product_type'][0]['value']})\n",
+    "                image_metadata.append(\n",
+    "                    {\n",
+    "                        data['main_image_id']: [\n",
+    "                            data['product_type'][0]['value'],\n",
+    "                            data['model_name'][0]['value'],\n",
+    "                            data['brand'][0]['value'],\n",
+    "                            data['country'],\n",
+    "                            data['item_name'][0]['value'],\n",
+    "                            data['marketplace'],\n",
+    "                        ]\n",
+    "                    }\n",
+    "                )\n",
     "                # can get more other info, see README.md for details\n",
     "            except KeyError:\n",
     "                pass"
@@ -328,21 +339,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "image_metadata_df = pd.DataFrame(\n",
     "    {\n",
     "        'image_id': [list(i.keys())[0] for i in image_metadata],\n",
-    "        'category': [list(i.values())[0] for i in image_metadata]\n",
+    "        'category': [list(i.values())[0][0] for i in image_metadata],\n",
+    "        'model_name': [list(i.values())[0][1] for i in image_metadata],\n",
+    "        'brand': [list(i.values())[0][2] for i in image_metadata],\n",
+    "        'country': [list(i.values())[0][3] for i in image_metadata],\n",
+    "        'item_name': [list(i.values())[0][4] for i in image_metadata],\n",
+    "        'marketplace': [list(i.values())[0][5] for i in image_metadata],\n",
     "    }\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +384,7 @@
        "Name: category, dtype: int64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,27 +402,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "CELLULAR_PHONE_CASE            64825\n",
-       "SHOES                          12964\n",
-       "GROCERY                         6509\n",
-       "HOME                            5247\n",
-       "HOME_BED_AND_BATH               3078\n",
-       "                               ...  \n",
-       "CONDIMENT                          1\n",
-       "HOME_ORGANIZERS_AND_STORAGE        1\n",
-       "GOLF_CLUB                          1\n",
-       "SCULPTURE                          1\n",
-       "STROLLER                           1\n",
-       "Name: category, Length: 573, dtype: int64"
+       "CELLULAR_PHONE_CASE    64559\n",
+       "SHOES                   7702\n",
+       "BOOT                    1934\n",
+       "SANDAL                  1784\n",
+       "FINERING                 578\n",
+       "                       ...  \n",
+       "EXERCISE_MAT               1\n",
+       "EXERCISE_BAND              1\n",
+       "FASTENER_DRIVE_BIT         1\n",
+       "AV_FURNITURE               1\n",
+       "UTILITY_KNIFE              1\n",
+       "Name: category, Length: 235, dtype: int64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,6 +443,257 @@
     "4. As a solution, they can use our service, which will look similar cases up\n",
     "\n",
     "The problem is quite challenging, since the model has to be able to determine all the subtle features of the case, e.g., Hello Kitty pic, stars, flowers, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we shall come up with a target variable for the CNN. Training the model to distinguish phone brands the cases are made for could be reasonable, since at the very least the model should recommend iphone cases when the user uploads an iphone case picture. Assuming the brand name comes first, let us try and extract the phone manufacturers names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_metadata_df_2200x1879['phone_brand'] = image_metadata_df_2200x1879['model_name'].\\\n",
+    "    str.lower().\\\n",
+    "    str.replace('\\xa0', ' ').\\\n",
+    "    apply(lambda x: x[:x.find(' ')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "samsung          10315\n",
+       "vivo              5303\n",
+       "oppo              3450\n",
+       "micromax          2830\n",
+       "lenovo            2805\n",
+       "                 ...  \n",
+       "gz8579-sl4042        1\n",
+       "gz8582-sl4077        1\n",
+       "gz8598-sl4076        1\n",
+       "gz8482-sl4080        1\n",
+       "gz8482-sl4054        1\n",
+       "Name: phone_brand, Length: 225, dtype: int64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_metadata_df_2200x1879['phone_brand'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a bunch of \"gz\" phones, we can combine them into one brand name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_metadata_df_2200x1879['phone_brand'] = image_metadata_df_2200x1879['phone_brand'].str.replace(r'^gz\\d{4}-sl\\d{4}', 'gz', regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "samsung           10315\n",
+       "vivo               5303\n",
+       "oppo               3450\n",
+       "micromax           2830\n",
+       "lenovo             2805\n",
+       "apple              2761\n",
+       "motorola           2526\n",
+       "gionee             2488\n",
+       "lg                 2417\n",
+       "huawei             2098\n",
+       "nokia              2048\n",
+       "asus               1844\n",
+       "sony               1671\n",
+       "xiaomi             1444\n",
+       "mi                 1163\n",
+       "oneplus            1068\n",
+       "realme              955\n",
+       "coolpad             794\n",
+       "lyf                 641\n",
+       "lava                625\n",
+       "htc                 580\n",
+       "infocus             520\n",
+       "tecno               456\n",
+       "poco                404\n",
+       "panasonic           395\n",
+       "microsoft           336\n",
+       "itel                288\n",
+       "letv                276\n",
+       "moto                237\n",
+       "comio               213\n",
+       "gz                  191\n",
+       "leeco               184\n",
+       "meizu               180\n",
+       "i                   177\n",
+       "honor               168\n",
+       "10.or               158\n",
+       "karbonn             130\n",
+       "infinix             124\n",
+       "spice                99\n",
+       "ivoomi               90\n",
+       "intex                61\n",
+       "mobiistar            55\n",
+       "nexus                51\n",
+       "ikall                46\n",
+       "redmi                44\n",
+       "techno               42\n",
+       "lephone              30\n",
+       "acer                 17\n",
+       "fluo                 15\n",
+       "galaxy                1\n",
+       "uv10920-sl4050        1\n",
+       "Name: phone_brand, dtype: int64"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_metadata_df_2200x1879['phone_brand'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have already reduced the number of classes quite significantly. However, there are also 2 categories with only 1 observation. Galaxy clearly refers to Samsung, and by googling \"uv10920\" we can find out that it is actually a [Redmi](https://www.amazon.in/Amazon-Brand-Designer-Sparkle-Printed/dp/B085S3SBM7) smartphone case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_metadata_df_2200x1879['phone_brand'] = image_metadata_df_2200x1879['phone_brand'].\\\n",
+    "    str.replace('galaxy', 'samsung').\\\n",
+    "    str.replace('uv10920-sl4050', 'redmi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "samsung      10316\n",
+       "vivo          5303\n",
+       "oppo          3450\n",
+       "micromax      2830\n",
+       "lenovo        2805\n",
+       "apple         2761\n",
+       "motorola      2526\n",
+       "gionee        2488\n",
+       "lg            2417\n",
+       "huawei        2098\n",
+       "nokia         2048\n",
+       "asus          1844\n",
+       "sony          1671\n",
+       "xiaomi        1444\n",
+       "mi            1163\n",
+       "oneplus       1068\n",
+       "realme         955\n",
+       "coolpad        794\n",
+       "lyf            641\n",
+       "lava           625\n",
+       "htc            580\n",
+       "infocus        520\n",
+       "tecno          456\n",
+       "poco           404\n",
+       "panasonic      395\n",
+       "microsoft      336\n",
+       "itel           288\n",
+       "letv           276\n",
+       "moto           237\n",
+       "comio          213\n",
+       "gz             191\n",
+       "leeco          184\n",
+       "meizu          180\n",
+       "i              177\n",
+       "honor          168\n",
+       "10.or          158\n",
+       "karbonn        130\n",
+       "infinix        124\n",
+       "spice           99\n",
+       "ivoomi          90\n",
+       "intex           61\n",
+       "mobiistar       55\n",
+       "nexus           51\n",
+       "ikall           46\n",
+       "redmi           45\n",
+       "techno          42\n",
+       "lephone         30\n",
+       "acer            17\n",
+       "fluo            15\n",
+       "Name: phone_brand, dtype: int64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_metadata_df_2200x1879['phone_brand'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(49,)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_metadata_df_2200x1879['phone_brand'].value_counts().shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All in all, we end up with 49 unique brands in total. We can either set a threshold and combine some underrepresented classes into one category, or proceed with 49 classes"
    ]
   },
   {
