Add script to extract relevant pictures from the whole images sample

--- a/metadata/res_analysis.ipynb
+++ b/metadata/res_analysis.ipynb
@@ -698,6 +698,168 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_metadata_df_2200x1879.to_csv('images_phone_cases.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>category</th>\n",
+       "      <th>model_name</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>country</th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>marketplace</th>\n",
+       "      <th>height</th>\n",
+       "      <th>width</th>\n",
+       "      <th>path</th>\n",
+       "      <th>phone_brand</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>61PjvipfNfL</td>\n",
+       "      <td>CELLULAR_PHONE_CASE</td>\n",
+       "      <td>Itel A25</td>\n",
+       "      <td>Amazon Brand - Solimo</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>Amazon Brand - Solimo Designer Sperking Stars ...</td>\n",
+       "      <td>Amazon</td>\n",
+       "      <td>2200</td>\n",
+       "      <td>1879</td>\n",
+       "      <td>02/0257d665.jpg</td>\n",
+       "      <td>itel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>81zNMSIDRRL</td>\n",
+       "      <td>CELLULAR_PHONE_CASE</td>\n",
+       "      <td>Asus Zenfone 3 Laser ZC551KL</td>\n",
+       "      <td>Amazon Brand - Solimo</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>Amazon Brand - Solimo Designer White Peacock R...</td>\n",
+       "      <td>Amazon</td>\n",
+       "      <td>2200</td>\n",
+       "      <td>1879</td>\n",
+       "      <td>ff/fff5daaa.jpg</td>\n",
+       "      <td>asus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>710EXpQig4L</td>\n",
+       "      <td>CELLULAR_PHONE_CASE</td>\n",
+       "      <td>Vivo Y69</td>\n",
+       "      <td>Amazon Brand - Solimo</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>Amazon Brand - Solimo Designer Valley View 3D ...</td>\n",
+       "      <td>Amazon</td>\n",
+       "      <td>2200</td>\n",
+       "      <td>1879</td>\n",
+       "      <td>e2/e29e0326.jpg</td>\n",
+       "      <td>vivo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>71wFnGN0FwL</td>\n",
+       "      <td>CELLULAR_PHONE_CASE</td>\n",
+       "      <td>Motorola Moto E 2nd Generation</td>\n",
+       "      <td>Amazon Brand - Solimo</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>Amazon Brand - Solimo Designer Makeup Set 3D P...</td>\n",
+       "      <td>Amazon</td>\n",
+       "      <td>2200</td>\n",
+       "      <td>1879</td>\n",
+       "      <td>a5/a56285ef.jpg</td>\n",
+       "      <td>motorola</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>71aFO7Pla1L</td>\n",
+       "      <td>CELLULAR_PHONE_CASE</td>\n",
+       "      <td>Vivo V9 / V9 Pro</td>\n",
+       "      <td>Amazon Brand - Solimo</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>Amazon Brand - Solimo Designer Lighting 3D Pri...</td>\n",
+       "      <td>Amazon</td>\n",
+       "      <td>2200</td>\n",
+       "      <td>1879</td>\n",
+       "      <td>a3/a378a264.jpg</td>\n",
+       "      <td>vivo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      image_id             category                      model_name  \\\n",
+       "0  61PjvipfNfL  CELLULAR_PHONE_CASE                        Itel A25   \n",
+       "1  81zNMSIDRRL  CELLULAR_PHONE_CASE    Asus Zenfone 3 Laser ZC551KL   \n",
+       "2  710EXpQig4L  CELLULAR_PHONE_CASE                        Vivo Y69   \n",
+       "3  71wFnGN0FwL  CELLULAR_PHONE_CASE  Motorola Moto E 2nd Generation   \n",
+       "4  71aFO7Pla1L  CELLULAR_PHONE_CASE                Vivo V9 / V9 Pro   \n",
+       "\n",
+       "                   brand country  \\\n",
+       "0  Amazon Brand - Solimo      IN   \n",
+       "1  Amazon Brand - Solimo      IN   \n",
+       "2  Amazon Brand - Solimo      IN   \n",
+       "3  Amazon Brand - Solimo      IN   \n",
+       "4  Amazon Brand - Solimo      IN   \n",
+       "\n",
+       "                                           item_name marketplace  height  \\\n",
+       "0  Amazon Brand - Solimo Designer Sperking Stars ...      Amazon    2200   \n",
+       "1  Amazon Brand - Solimo Designer White Peacock R...      Amazon    2200   \n",
+       "2  Amazon Brand - Solimo Designer Valley View 3D ...      Amazon    2200   \n",
+       "3  Amazon Brand - Solimo Designer Makeup Set 3D P...      Amazon    2200   \n",
+       "4  Amazon Brand - Solimo Designer Lighting 3D Pri...      Amazon    2200   \n",
+       "\n",
+       "   width             path phone_brand  \n",
+       "0   1879  02/0257d665.jpg        itel  \n",
+       "1   1879  ff/fff5daaa.jpg        asus  \n",
+       "2   1879  e2/e29e0326.jpg        vivo  \n",
+       "3   1879  a5/a56285ef.jpg    motorola  \n",
+       "4   1879  a3/a378a264.jpg        vivo  "
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_metadata_df_2200x1879.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
