--- a/server.ipynb
+++ b/server.ipynb
@@ -55,8 +55,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "54.8 ms ± 4.52 ms per loop (mean ± std. dev. of 5 runs, 5 loops each)\n",
-      "10.2 ms ± 4.52 ms per loop (mean ± std. dev. of 5 runs, 5 loops each)\n"
+      "67.2 ms ± 31 ms per loop (mean ± std. dev. of 5 runs, 5 loops each)\n",
+      "The slowest run took 6.03 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "14 ms ± 13.3 ms per loop (mean ± std. dev. of 5 runs, 5 loops each)\n"
      ]
     }
    ],
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "caf73c44-7163-478f-83b8-a95b354be617",
    "metadata": {
     "tags": []
@@ -144,9 +145,7 @@
     "        # Set the parameters, evaluate the model, return the result\n",
     "        self.set_parameters(parameters)\n",
     "        loss, accuracy = self.model.evaluate(self.dataset[0], self.dataset[1])\n",
-    "        return float(loss), len(self.dataset[0]), {\"accuracy\": float(accuracy)}\n",
-    "\n",
-    "# Define Flower client for JAX\n"
+    "        return float(loss), len(self.dataset[0]), {\"accuracy\": float(accuracy)}"
    ]
   },
   {
